Clarity fixes - Fix task grid list overflow footer

--- a/src/main/webapp/tds/web-app/css/page/module/taskManager/task-list.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/taskManager/task-list.component.sass
@@ -3,7 +3,7 @@
   padding-top: 10px
   height: 90vh
   min-height: 620px;
-  min-width: 830px;
+  min-width: 980px;
   form
     height: 12%
     padding-top: 0
